welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:8: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var x:Direction
      ^SnakeBuggle:8: error: local variables must be initialized
  var x:Direction
      ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:13: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:15: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:15: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:20: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:20: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return true
      ^SnakeBuggle:22: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:22: warning: enclosing method fonctiontest has result type Unit: return value discarded
      return false
      ^SnakeBuggle:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
    return false
           ^SnakeBuggle:25: warning: enclosing method fonctiontest has result type Unit: return value discarded
    return false
    ^